# advent-of-code

./: .gitignore  :q:q:q:q:q:q:q:q:q:qq  README.md  README.md.backup  \  templete.rs  test.rs  tmp.txt
1-day/src/: main.rs
2-day/: Cargo.toml
2-day/src/: main.rs
2022/: templete.rs
2022/11-day/: Cargo.toml  how-it-works.note.md
2022/12-day/: Cargo.toml
2022/4-day/: Cargo.toml
2022/5-day/: Cargo.toml
2022/6-day/: Cargo.toml
2022/8-day/: Cargo.toml
2023/: templete.rs
2023/1-day/: Cargo.toml
2023/3-day/: Cargo.toml
3-day/: Cargo.toml
5-day/: Cargo.toml
5-day/src/: dummy-data.txt  main.rs
6-day/src/: part_2.rs
7-day/: Cargo.toml
7-day/src/: part_1.rs~
8-day/: Cargo.toml
8-day/src/: lib.rs~  part_2.rs~
day 1/src/: main.rs
day-1/src/: main.rs
day-2/: Cargo.toml~  notes.md  output-d2.txt
day-2/src/: dummy-data.txt  main.rs  part_1.rs  part_2.rs
day-3/src/: dummy-data.txt  main.rs  part_1.rs  part_2.rs
day-4/src/: dummy-data.txt  part_1.rs  part_2.rs
day-5/: Cargo.toml  Cargo.toml~
day-5/src/: chart.txt  data.txt  dummy-data.txt  main.rs  main.rs~  part_1.rs  part_2.rs  part_2.rs~  test.rs  test.rs~
day-6/src/: part_1.rs~
day-7/src/: dummy-data.txt~
day-8/src/: dummy-data.txt  dummy-data.txt~~  lv-settings.lua  main.rs  main.rs~  part_1.rs  part_1.rs~  part_1_alt.rs  part_1_alt.rs~  part_1_test.rs~  part_2.rs  part_2v2.rs
day-templete/: Cargo.toml
day-templete/src/: main.rs  part_1.rs  part_2.rs
day_8/src/: dummy-data.txt~  part_1.rs  part_1.rs~
src/: ac1_log.rs  main.rs  test.rs
y2022/: templete.rs
(+49 files in other folders)
